# alumnium

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  JAVA_VS_PYTHON_GAPS.md  Makefile  README.md  TODO.md  airbnb.md  alumnium.code-workspace  behave.ini  calculator.md  demo.py  fnox.toml  issue-report.md  mise.toml  opencode.json  package.json  pnpm-lock.yaml  pr-request-template.md  pyproject.toml  pytest.ini  requirements.txt  test.py  test_describe.py  tsconfig.json  typos.toml
.claude/: settings.json  settings.local.json
alumni/: aria.py  (+3 more)
alumnium/server/: .gitignore  Makefile  README.md  __init__.py  api_models.py  cache.py  llm_factory.py  main.py  models.py  pyproject.toml  service.py  session.py  session_manager.py
alumnium/server/accessibility/: __init__.py  base_accessibility_tree.py  base_server_accessibility_tree.py  base_server_tree.py  chromium_accessibility_tree.py  chromium_server_tree.py  server_uiautomator2_accessibility_tree.py  uiautomator2_accessibility_tree.py  uiautomator2_server_tree.py  xcuitest_accessibility_tree.py  xcuitest_server_tree.py
alumnium/server/agents/: __init__.py  actor_agent.py  area_agent.py  base_agent.py  locator_agent.py  planner_agent.py  retriever_agent.py
alumnium/server/agents/planner_prompts/google/: user.md
alumnium/server/agents/planner_prompts/meta/: system.md
alumnium/server/cache/: filesystem_cache.py  sqlite_cache.py
alumnium/server/tests/: test_server.py
(+424 files in other folders)
